--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,6 +16,11 @@ html {
 #header{
     margin-bottom: 15px;
 }
+
+.box-shadow{
+   box-shadow: 0 2px 2px #f4f4f4; 
+    
+}
 .main-nav li{
     text-transform: uppercase;
 }
