--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,11 +5,11 @@
 }
 
 html {
-    background-color:#fff;
+    background-color:#f3f3f3;
     color: #555;
     font-family: 'Heue Helvetica', 'Arial', sans-serif;
     font-weight: 300;
-    font-size: 14px;
+    font-size: 15px;
     text-rendering: optimizeLegibility;
 }
 
